<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LunchApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="abrir_navigation_menu">Abrir menú deslizante</string>
    <string name="aceptar">Aceptar</string>
    <string name="ayuda">Ayuda</string>
    <string name="buscar_tipo_negocio">Buscar negocios</string>
    <string name="buscar_negocio">Buscar</string>
    <string name="cerrar_navigation_menu">Cerrar menú deslizante</string>
    <string name="close">Close</string>
    <string name="compartir"> Compartir</string>
    <string name="comunicate">Comunícate</string>
    <string name="correo_app">LUNCHAPPWO@GMAIL.COM</string>
    <string name="descripcion_icono">Aquí se coloca el icono de la app.</string>
    <string name="descripcion_tipo_negocio_img">imagen del tipo de tienda</string>
    <string name="descripcion_negocio_img">imagen de la tienda</string>
    <string name="descripcion_logo_nombre_lunchapp">Aquí se coloca la imagen del logo o nombre de la App</string>
    <string name="direcciones">Direcciones</string>
    <string name="direccion">Direccion</string>
    <string name="email_app">LUNCHAPPWO@GMAIL.COM</string>
    <string name="enviar_mensaje">Enviar</string>
    <string name="email_usuario">Correo electrónico</string>
    <string name="escribe_tu_queja_sugerencia">Escribe tu queja o sugerencia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen_grupo_de_personas">Imagen que representa un grupo de personas.</string>
    <string name="menu">menu</string>
    <string name="error_carga_elementos">No carga elementos de cualquier pantalla?</string>
    <string name="dialog_carga_elementos">Listas en blanco.</string>
    <string name="dialog_carga_elementos_mensaje">Reinicie la app y compruebe su conexión a internet.</string>
    <string name="quejassugerencias">Quejas y Sugerencias</string>
    <string name="open">Open</string>
    <string name="opinion">opinión</string>
    <string name="pago">pago</string>
    <string name="problemas_tecnicos">Problemas técnicos</string>
    <string name="redes">redes</string>
    <string name="noredes">noredes</string>
    <string name="soporteyayuda">soporte ayuda</string>
    <string name="soporte_y_contacto">Soporte y Contacto</string>
    <string name="nombre_vic">VICTOR ALFONSO PÉREZ ESPINO</string>
    <string name="nombre_vicente">VICENTE AGUILERA PÉREZ</string>
    <string name="nombre_jalil">OMAR JALIL CASTILLO ZAMUDIO</string>
    <string name="titulo_ejemplo"> Titulo ejemplo</string>
    <string name="mensaje_ejemplo">Soy un mensaje de ejemplo.</string>
</resources>
