<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"

    >
    <!---  Este es el menú (opciones) del menú deslizante en MainActivity -->

    <item android:title="@string/comunicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/compartir"
                />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/ayuda" />
            <item
                android:id="@+id/nav_quejas"
                android:icon="@drawable/ic_info"
                android:title="@string/quejassugerencias" />
        </menu>
    </item>

</menu>
