<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragmentsPackage.quejasysugenencias"
    android:background="@android:color/white"
    android:weightSum="3"
    android:layout_margin="16dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">


        <EditText
            android:id="@+id/editText_correodecontacto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/email_usuario"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@color/colorPrimary"
            tools:targetApi="o"
            android:cursorVisible="true"

            />

        <EditText
            android:id="@+id/editText_comentariodeenvio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.4"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/escribe_tu_queja_sugerencia"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textCursorDrawable="@color/colorPrimary"
            tools:targetApi="o" />

        <Button
            android:id="@+id/button_enviarcomentario"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.25"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/enviar_mensaje"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:background="@drawable/transparent_button_inactive"/>

</LinearLayout>